# django-test

./: .gitignore  Dockerfile  db.sqlite3  docker-compose.yml  entrypoint.sh  pyproject.toml  setup.cfg
.github/workflows/: lint.yaml  pull_ghcr.yaml  stage.yaml  test.yaml
app/: models.py  tests.py  urls.py  views.py
app/templates/app/: base.html  login.html  register.html
kubernetes/production/: namespace.yaml  pod_noschedule.yaml
kubernetes/staging/: deployment-nginx.yaml  deployment.yaml  ingress-nginx.yaml  namespace.yaml  service-nginx.yaml
testapp/: settings.py  urls.py  wsgi.py
