[tool.poetry]
name = "testapp"
version = "0.1.0"
description = ""
authors = ["Denis Denis <slyusarenkodenisss@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.10"
django = "^4.1.7"
flake8 = "^6.0.0"
requests = "^2.28.2"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
